// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulSpin > Snapshot tests > Loading state snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r2"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="delightful-spin delightful-spin-spinning acss-sxthw7 css-dev-only-do-not-override-yotw4n css-var-r2"
      >
        <span
          class="delightful-spin-dot-holder"
        >
          <span
            class="delightful-spin-dot delightful-spin-dot-spin"
          >
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="delightful-spin-container delightful-spin-blur"
    >
      <div>
        内容区域
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSpin > Snapshot tests > Basic loader snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r1"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="delightful-spin delightful-spin-spinning acss-sxthw7 css-dev-only-do-not-override-yotw4n css-var-r1"
      >
        <span
          class="delightful-spin-dot-holder"
        >
          <span
            class="delightful-spin-dot delightful-spin-dot-spin"
          >
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="delightful-spin-container delightful-spin-blur"
    >
      <div>
        内容区域
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSpin > Snapshot tests > Large size loader snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r5"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="delightful-spin delightful-spin-spinning acss-znmur6 css-dev-only-do-not-override-yotw4n css-var-r5"
      >
        <span
          class="delightful-spin-dot-holder"
        >
          <span
            class="delightful-spin-dot delightful-spin-dot-spin"
          >
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="delightful-spin-container delightful-spin-blur"
    >
      <div>
        内容区域
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSpin > Snapshot tests > Small size loader snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r4"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="delightful-spin delightful-spin-spinning acss-12hgqwl css-dev-only-do-not-override-yotw4n css-var-r4"
      >
        <span
          class="delightful-spin-dot-holder"
        >
          <span
            class="delightful-spin-dot delightful-spin-dot-spin"
          >
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="delightful-spin-container delightful-spin-blur"
    >
      <div>
        内容区域
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSpin > Snapshot tests > With tip text snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r3"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="delightful-spin delightful-spin-spinning delightful-spin-show-text acss-sxthw7 css-dev-only-do-not-override-yotw4n css-var-r3"
      >
        <span
          class="delightful-spin-dot-holder"
        >
          <span
            class="delightful-spin-dot delightful-spin-dot-spin"
          >
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
            <i
              class="delightful-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="delightful-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="delightful-spin-container delightful-spin-blur"
    >
      <div>
        内容区域
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSpin > Snapshot tests > Delayed loading snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-spin-nested-loading acss-1tvuebw css-dev-only-do-not-override-yotw4n css-var-r6"
  >
    <div
      class="delightful-spin-container"
    >
      <div>
        内容区域
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSpin > Snapshot tests > Standalone loader snapshot 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="delightful-spin delightful-spin-spinning acss-sxthw7 css-dev-only-do-not-override-yotw4n css-var-r7"
  >
    <span
      class="delightful-spin-dot-holder"
    >
      <span
        class="delightful-spin-dot delightful-spin-dot-spin"
      >
        <i
          class="delightful-spin-dot-item"
        />
        <i
          class="delightful-spin-dot-item"
        />
        <i
          class="delightful-spin-dot-item"
        />
        <i
          class="delightful-spin-dot-item"
        />
      </span>
    </span>
  </div>
</DocumentFragment>
`;
